tests/ui/async-await/in-trait/return-not-existing-type-wrapping-rpitit.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/return-not-existing-type-wrapping-rpitit.rs:7:25
   |
LL |     fn bar() -> Wrapper<Missing<impl Sized>>;
   |                         ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
